--- a/style.css
+++ b/style.css
@@ -12,17 +12,20 @@ body {
 }
 
 /* navbar design */
-nav{
+nav {
     padding: 16px 200px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid #412567;
 }
-nav .logo-name{
+
+nav .logo-name {
     font-size: 2rem;
     color: rgba(255, 255, 255, 0.815);
 }
-nav .logo-name span{
+
+nav .logo-name span {
     font-size: 2rem;
     background: linear-gradient(90deg, #F7E93F, #FB09B4, #9100F8);
     background-clip: text;
@@ -31,25 +34,28 @@ nav .logo-name span{
     color: white;
 }
 
-nav .menu{
+nav .menu {
     display: flex;
     align-items: center;
     gap: 32px;
     list-style-type: none;
     padding: 5px;
 }
-nav .menu li a{
+
+nav .menu li a {
     text-decoration: none;
     color: #ffffff;
     font-size: 1rem;
     padding: 10px 15px;
-    font-weight: 500;   
+    font-weight: 500;
 }
-nav .menu li a:hover{
-    background:linear-gradient(90deg,#FB09B4, #9100F8);
-    border-radius: 10px;   
+
+nav .menu li a:hover {
+    background: linear-gradient(90deg, #FB09B4, #9100F8);
+    border-radius: 10px;
 }
-.nav-btn .btn{
+
+.nav-btn .btn {
     background: linear-gradient(47deg, #F7E93F, #FB09B4, #9100F8);
     padding: 12px 16px;
     border: none;
@@ -61,23 +67,157 @@ nav .menu li a:hover{
     gap: 5px;
 }
 
+/* header banner section design */
+.banner-contant {
+    background: url('./assets/hero-bg.png');
+    min-height: 100vh;
+    max-width: 1600px;
+    margin: 0 auto;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: auto;
+    background-size: contain;
+    margin-top: 50px;
+}
+
+
+.banner-image .cercle {
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 350px;
+}
+
+.banner-image .cercle img {
+    margin-top: 100px;
+}
+
+.banner-image .mic {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    bottom: 264px;
+}
+
+.banner-text {
+    position: relative;
+    bottom: 150px;
+    width: 550px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.text h2 {
+    font-size: 3.75rem;
+    color: #ffffff;
+    margin-bottom: 8px;
+}
+
+.text p {
+    color: #ffffff;
+    margin-bottom: 24px;
+}
+
+.banner-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+}
+
+.banner-btn .btn {
+    background: linear-gradient(47deg, #F7E93F, #FB09B4, #9100F8);
+    padding: 12px 16px;
+    border: none;
+    border-radius: 40px;
+    color: #ffffff;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    cursor: pointer;
+}
+
+.white {
+    padding: 12px 16px;
+    border: none;
+    border-radius: 40px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    cursor: pointer;
+    background-color: transparent;
+    border: 1px solid #00FF88;
+    color: #00FF88;
+}
+
+.banner-image {
+    width: 100%;
+    position: relative;
+}
+
+.badge {
+    text-align: center;
+    background-color: #00FF88;
+    border: none;
+    border-radius: 1000px;
+    width: 60px;
+    padding: 8px 10px;
+    box-shadow: 0px 3px 27px #00FF8850;
+    position: absolute;
+    top: 23%;
+    right: 10%;
+}
+
+
+
+
+
 /* responsive for mobail */
-@media screen and (max-width:576px){
-    nav .menu{
+@media screen and (max-width:576px) {
+    nav .menu {
         display: none;
     }
-    .nav-btn{
+
+    .nav-btn {
         display: none;
     }
-    nav{
+
+    nav {
         width: 100%;
         flex: start;
         padding: 16px 20px;
     }
 
-    .hamburger{
+    .hamburger {
         display: flex;
         align-items: center;
-        
+
     }
-}  
+
+    .banner-image {
+        width: 100%;
+        height: 100%;
+    }
+
+    .banner-contant {
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+        background-position: top center;
+        margin-top: 50px;
+        width: 576px;
+    }
+
+
+
+}
